# bil

./: .dockerignore  Cargo.toml  Dockerfile  README.md  TODO.md  bil.wasm  build.sh  index.html  run_web.sh
assets/: bil_pixel.kra
k8s/: bil.yaml
src/: main.rs
