[package]
name = "bil"
version = "0.1.0"
authors = ["Daniel Åkerud <daniel.akerud@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.'*']
opt-level = 3

[dependencies]
nanoserde = "0.1"
macroquad = "0.3"
